[metadata]
name = pydokku
version = 0.0.0
description = Easily get structured data and control Dokku installations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PythonicCafe/pydokku/
keywords = dokku platform-as-a-service paas docker deploy
author = Ãlvaro Justen
author_email = alvarojusten@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = true
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    CONTRIBUTING.md
    Makefile
    data/*
    requirements-development.txt
    requirements.txt
    scripts/*
    tests/*

[options.entry_points]
console_scripts =
    pydokku = pydokku.cli:main

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,docker/data/*,.local
ignore=I001,I003,I004,E231,E501,E203,W503
